pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart.strong.modular.expect
library test;
//
// Problems in library:
//
// pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:26:70: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'int Function(Object, Object)'.
//  - 'Object' is from 'dart:core'.
//   takeOOI(/*error:COULD_NOT_INFER,error:INVALID_CAST_FUNCTION*/ math.max);
//                                                                      ^
//
// pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:28:73: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'int Function(double, int)'.
//       /*error:COULD_NOT_INFER,error:ARGUMENT_TYPE_NOT_ASSIGNABLE*/ math.max);
//                                                                         ^
//
// pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:30:73: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'double Function(int, double)'.
//       /*error:COULD_NOT_INFER,error:ARGUMENT_TYPE_NOT_ASSIGNABLE*/ math.max);
//                                                                         ^
//
// pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:31:70: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'num Function(Object, Object)'.
//  - 'Object' is from 'dart:core'.
//   takeOON(/*error:COULD_NOT_INFER,error:INVALID_CAST_FUNCTION*/ math.max);
//                                                                      ^
//
// pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:32:70: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'num Function(Object, Object)'.
//  - 'Object' is from 'dart:core'.
//   takeOOO(/*error:COULD_NOT_INFER,error:INVALID_CAST_FUNCTION*/ math.max);
//                                                                      ^
//
// pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:45:65: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'int Function(Object, Object)'.
//  - 'Object' is from 'dart:core'.
//   takeOOI(/*error:COULD_NOT_INFER,error:INVALID_CAST_FUNCTION*/ min);
//                                                                 ^
//
// pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:46:72: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'int Function(double, int)'.
//   takeIDI(/*error:COULD_NOT_INFER,error:ARGUMENT_TYPE_NOT_ASSIGNABLE*/ min);
//                                                                        ^
//
// pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:47:72: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'double Function(int, double)'.
//   takeDID(/*error:COULD_NOT_INFER,error:ARGUMENT_TYPE_NOT_ASSIGNABLE*/ min);
//                                                                        ^
//
// pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:48:65: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'num Function(Object, Object)'.
//  - 'Object' is from 'dart:core'.
//   takeOON(/*error:COULD_NOT_INFER,error:INVALID_CAST_FUNCTION*/ min);
//                                                                 ^
//
// pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:49:65: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'num Function(Object, Object)'.
//  - 'Object' is from 'dart:core'.
//   takeOOO(/*error:COULD_NOT_INFER,error:INVALID_CAST_FUNCTION*/ min);
//                                                                 ^
//
// pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:73:37: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'num Function(Object, Object)'.
//  - 'Object' is from 'dart:core'.
//   takeOON(new C() . /*@target=C.m*/ m);
//                                     ^
//
// pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:75:37: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'num Function(Object, Object)'.
//  - 'Object' is from 'dart:core'.
//   takeOOO(new C() . /*@target=C.m*/ m);
//                                     ^
//
// pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:82:37: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'int Function(Object, Object)'.
//  - 'Object' is from 'dart:core'.
//   takeOOI(new C() . /*@target=C.m*/ m);
//                                     ^
//
// pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:85:37: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'int Function(double, int)'.
//   takeIDI(new C() . /*@target=C.m*/ m);
//                                     ^
//
// pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:87:37: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'double Function(int, double)'.
//   takeDID(new C() . /*@target=C.m*/ m);
//                                     ^
//
import self as self;
import "dart:core" as core;

import "dart:math" as math;
import "dart:math" show min;

class C extends core::Object {
  synthetic constructor •() → self::C
    : super core::Object::•()
    ;
  method m<T extends core::num>(self::C::m::T x, self::C::m::T y) → self::C::m::T
    return throw "";
}
static method test() → dynamic {
  self::takeIII(#C2);
  self::takeDDD(#C3);
  self::takeNNN(#C4);
  self::takeIDN(#C4);
  self::takeDIN(#C4);
  self::takeIIN(#C2);
  self::takeDDN(#C3);
  self::takeIIO(#C2);
  self::takeDDO(#C3);
  self::takeOOI(invalid-expression "pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:26:70: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'int Function(Object, Object)'.
 - 'Object' is from 'dart:core'.
  takeOOI(/*error:COULD_NOT_INFER,error:INVALID_CAST_FUNCTION*/ math.max);
                                                                     ^" in #C4 as{TypeError} (core::Object, core::Object) → core::int);
  self::takeIDI(invalid-expression "pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:28:73: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'int Function(double, int)'.
      /*error:COULD_NOT_INFER,error:ARGUMENT_TYPE_NOT_ASSIGNABLE*/ math.max);
                                                                        ^" in #C4 as{TypeError} (core::double, core::int) → core::int);
  self::takeDID(invalid-expression "pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:30:73: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'double Function(int, double)'.
      /*error:COULD_NOT_INFER,error:ARGUMENT_TYPE_NOT_ASSIGNABLE*/ math.max);
                                                                        ^" in #C4 as{TypeError} (core::int, core::double) → core::double);
  self::takeOON(invalid-expression "pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:31:70: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'num Function(Object, Object)'.
 - 'Object' is from 'dart:core'.
  takeOON(/*error:COULD_NOT_INFER,error:INVALID_CAST_FUNCTION*/ math.max);
                                                                     ^" in #C4 as{TypeError} (core::Object, core::Object) → core::num);
  self::takeOOO(invalid-expression "pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:32:70: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'num Function(Object, Object)'.
 - 'Object' is from 'dart:core'.
  takeOOO(/*error:COULD_NOT_INFER,error:INVALID_CAST_FUNCTION*/ math.max);
                                                                     ^" in #C4 as{TypeError} (core::Object, core::Object) → core::num);
  self::takeIII(#C6);
  self::takeDDD(#C7);
  self::takeNNN(#C8);
  self::takeIDN(#C8);
  self::takeDIN(#C8);
  self::takeIIN(#C6);
  self::takeDDN(#C7);
  self::takeIIO(#C6);
  self::takeDDO(#C7);
  self::takeOOI(invalid-expression "pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:45:65: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'int Function(Object, Object)'.
 - 'Object' is from 'dart:core'.
  takeOOI(/*error:COULD_NOT_INFER,error:INVALID_CAST_FUNCTION*/ min);
                                                                ^" in #C8 as{TypeError} (core::Object, core::Object) → core::int);
  self::takeIDI(invalid-expression "pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:46:72: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'int Function(double, int)'.
  takeIDI(/*error:COULD_NOT_INFER,error:ARGUMENT_TYPE_NOT_ASSIGNABLE*/ min);
                                                                       ^" in #C8 as{TypeError} (core::double, core::int) → core::int);
  self::takeDID(invalid-expression "pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:47:72: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'double Function(int, double)'.
  takeDID(/*error:COULD_NOT_INFER,error:ARGUMENT_TYPE_NOT_ASSIGNABLE*/ min);
                                                                       ^" in #C8 as{TypeError} (core::int, core::double) → core::double);
  self::takeOON(invalid-expression "pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:48:65: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'num Function(Object, Object)'.
 - 'Object' is from 'dart:core'.
  takeOON(/*error:COULD_NOT_INFER,error:INVALID_CAST_FUNCTION*/ min);
                                                                ^" in #C8 as{TypeError} (core::Object, core::Object) → core::num);
  self::takeOOO(invalid-expression "pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:49:65: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'num Function(Object, Object)'.
 - 'Object' is from 'dart:core'.
  takeOOO(/*error:COULD_NOT_INFER,error:INVALID_CAST_FUNCTION*/ min);
                                                                ^" in #C8 as{TypeError} (core::Object, core::Object) → core::num);
  self::takeIII(new self::C::•().{self::C::m}{<T extends core::num>(T, T) → T}<core::int>);
  self::takeDDD(new self::C::•().{self::C::m}{<T extends core::num>(T, T) → T}<core::double>);
  self::takeNNN(new self::C::•().{self::C::m}{<T extends core::num>(T, T) → T}<core::num>);
  self::takeIDN(new self::C::•().{self::C::m}{<T extends core::num>(T, T) → T}<core::num>);
  self::takeDIN(new self::C::•().{self::C::m}{<T extends core::num>(T, T) → T}<core::num>);
  self::takeIIN(new self::C::•().{self::C::m}{<T extends core::num>(T, T) → T}<core::int>);
  self::takeDDN(new self::C::•().{self::C::m}{<T extends core::num>(T, T) → T}<core::double>);
  self::takeIIO(new self::C::•().{self::C::m}{<T extends core::num>(T, T) → T}<core::int>);
  self::takeDDO(new self::C::•().{self::C::m}{<T extends core::num>(T, T) → T}<core::double>);
  self::takeOON(invalid-expression "pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:73:37: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'num Function(Object, Object)'.
 - 'Object' is from 'dart:core'.
  takeOON(new C() . /*@target=C.m*/ m);
                                    ^" in (new self::C::•().{self::C::m}{<T extends core::num>(T, T) → T}<core::num>) as{TypeError} (core::Object, core::Object) → core::num);
  self::takeOOO(invalid-expression "pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:75:37: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'num Function(Object, Object)'.
 - 'Object' is from 'dart:core'.
  takeOOO(new C() . /*@target=C.m*/ m);
                                    ^" in (new self::C::•().{self::C::m}{<T extends core::num>(T, T) → T}<core::num>) as{TypeError} (core::Object, core::Object) → core::num);
  self::takeOOI(invalid-expression "pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:82:37: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'int Function(Object, Object)'.
 - 'Object' is from 'dart:core'.
  takeOOI(new C() . /*@target=C.m*/ m);
                                    ^" in (new self::C::•().{self::C::m}{<T extends core::num>(T, T) → T}<core::num>) as{TypeError} (core::Object, core::Object) → core::int);
  self::takeIDI(invalid-expression "pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:85:37: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'int Function(double, int)'.
  takeIDI(new C() . /*@target=C.m*/ m);
                                    ^" in (new self::C::•().{self::C::m}{<T extends core::num>(T, T) → T}<core::num>) as{TypeError} (core::double, core::int) → core::int);
  self::takeDID(invalid-expression "pkg/front_end/testcases/inference/generic_methods_infer_generic_instantiation.dart:87:37: Error: The argument type 'num Function(num, num)' can't be assigned to the parameter type 'double Function(int, double)'.
  takeDID(new C() . /*@target=C.m*/ m);
                                    ^" in (new self::C::•().{self::C::m}{<T extends core::num>(T, T) → T}<core::num>) as{TypeError} (core::int, core::double) → core::double);
}
static method takeIII((core::int, core::int) → core::int fn) → void {}
static method takeDDD((core::double, core::double) → core::double fn) → void {}
static method takeIDI((core::double, core::int) → core::int fn) → void {}
static method takeDID((core::int, core::double) → core::double fn) → void {}
static method takeIDN((core::double, core::int) → core::num fn) → void {}
static method takeDIN((core::int, core::double) → core::num fn) → void {}
static method takeIIN((core::int, core::int) → core::num fn) → void {}
static method takeDDN((core::double, core::double) → core::num fn) → void {}
static method takeNNN((core::num, core::num) → core::num fn) → void {}
static method takeOON((core::Object, core::Object) → core::num fn) → void {}
static method takeOOO((core::Object, core::Object) → core::num fn) → void {}
static method takeOOI((core::Object, core::Object) → core::int fn) → void {}
static method takeIIO((core::int, core::int) → core::Object fn) → void {}
static method takeDDO((core::double, core::double) → core::Object fn) → void {}
static method main() → dynamic {}

constants  {
  #C1 = static-tearoff math::max
  #C2 = instantiation #C1 <core::int>
  #C3 = instantiation #C1 <core::double>
  #C4 = instantiation #C1 <core::num>
  #C5 = static-tearoff math::min
  #C6 = instantiation #C5 <core::int>
  #C7 = instantiation #C5 <core::double>
  #C8 = instantiation #C5 <core::num>
}
